# CrisisWorld

./: .coverage  .gitignore  Blog.md  MANIFEST.in  README.md  Refactor_plan.md  __init__.py  client.py  inference.py  manual_testing.py  models.py  openenv.yaml  project.md  pyproject.toml
.claude/: CLAUDE.md
agents/: CLAUDE.md  __init__.py  cortex_agent.py  flat.py  single_llm.py
configs/: cortex_default.yaml  env_default.yaml  experiment_ablation.yaml  experiment_llm.yaml  experiment_sft_eval.yaml  llm_config.yaml  reward_weights.yaml
cortex/: CLAUDE.md  __init__.py  budget.py  deliberator.py  memory.py
cortex/llm/: __init__.py  prompts.py  provider.py  roles.py
cortex/roles/: CLAUDE.md  __init__.py  critic.py  executive.py  perception.py  planner.py  world_modeler.py
data/: policy_sft.jsonl  router_sft.jsonl
evaluation/: CLAUDE.md  __init__.py  ablations.py  analysis.py  metrics.py  runner.py
notebooks/: crisis_world_sft.ipynb  router_sft_colab_demo.ipynb  router_sft_unsloth_showcase_plan.py
protocols/: CLAUDE.md  __init__.py  agent.py  budget.py  env.py  logger.py  memory.py  role.py
schemas/: CLAUDE.md  __init__.py  artifact.py  budget.py  config.py  episode.py
server/: CrisisWorld_environment.py  Dockerfile  __init__.py  _internal.py  actions.py  app.py  constraints.py  dynamics.py  observations.py  regions.py  requirements.txt  resources.py  rewards.py  scenarios.py  stakeholders.py  termination.py
space/: app.py  requirements.txt
src/agents/: CLAUDE.md
src/cortex/: CLAUDE.md
src/cortex/roles/: CLAUDE.md  __init__.py  critic.py  executive.py  perception.py  planner.py  world_modeler.py
src/env/: CLAUDE.md
src/evaluation/: CLAUDE.md  __init__.py  ablations.py  analysis.py  metrics.py  runner.py
src/logging/: CLAUDE.md  __init__.py  formatters.py  serializer.py  tracer.py
src/protocols/: CLAUDE.md  __init__.py  agent.py  budget.py  env.py  logger.py  memory.py  role.py
src/schemas/: CLAUDE.md  __init__.py  action.py  config.py  observation.py  reward.py  state.py
tests/e2e/: test_cortex_episode.py  test_flat_episode.py
tests/integration/: test_agent_env.py  test_cortex_loop.py  test_env_step.py  test_episode.py
tests/unit/: test_budget.py  test_dynamics.py  test_formatters.py  test_llm_roles.py  test_models.py  test_protocols.py  test_regions.py  test_resources.py  test_results.py  test_rewards.py  test_roles.py  test_router_sft.py  test_schemas.py  test_serializer.py  test_tracer.py  test_training.py
tracing/: CLAUDE.md  __init__.py  formatters.py  serializer.py  tracer.py
training/: __init__.py  data_export.py  hub.py  manifest.py  results.py
training/router_sft/: README.md  __init__.py  bootstrap.py  collector.py  export_jsonl.py  labels.py  prompts.py  requirements.txt  train.py
