[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisis-world"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.3,<0.3",
    "pydantic>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
training = [
    "trl>=0.9",
    "peft>=0.12",
    "transformers>=4.44",
    "datasets>=2.20",
    "accelerate>=0.33",
    "bitsandbytes>=0.43",
    "huggingface_hub>=0.23",
    "torch>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m CrisisWorld.server.app
server = "CrisisWorld.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["CrisisWorld",
            "CrisisWorld.agents",
            "CrisisWorld.cortex",
            "CrisisWorld.cortex.roles",
            "CrisisWorld.cortex.llm",
            "CrisisWorld.evaluation",
            "CrisisWorld.protocols",
            "CrisisWorld.schemas",
            "CrisisWorld.server",
            "CrisisWorld.tests",
            "CrisisWorld.tracing",
            "CrisisWorld.training",
            "CrisisWorld.training.router_sft",
        ]

[tool.setuptools.package-dir]
"CrisisWorld" = "."
"CrisisWorld.agents" = "agents"
"CrisisWorld.cortex" = "cortex"
"CrisisWorld.cortex.roles" = "cortex/roles"
"CrisisWorld.cortex.llm" = "cortex/llm"
"CrisisWorld.evaluation" = "evaluation"
"CrisisWorld.protocols" = "protocols"
"CrisisWorld.schemas" = "schemas"
"CrisisWorld.server" = "server"
"CrisisWorld.tests" = "tests"
"CrisisWorld.tracing" = "tracing"
"CrisisWorld.training" = "training"
"CrisisWorld.training.router_sft" = "training/router_sft"

[tool.setuptools.package-data]
"CrisisWorld" = [
    "data/*.jsonl",
    "configs/*.yaml",
    "configs/*.yml",
]
